--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Sithum Batrow">
     <link rel="icon" href="https://a.fsdn.com/allura/p/darkssh/icon?d062906e8343a44614c675c811a4f6e7e5ed1f9cfe981f3ca65b53a3b6a6fdf9?&w=135" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://a.fsdn.com/allura/p/darkssh/icon?d062906e8343a44614c675c811a4f6e7e5ed1f9cfe981f3ca65b53a3b6a6fdf9?&w=135">
+     <meta name="ccpayment-site-verification" content="d9e6b46563c1a62a6d0979d929fe2e6b"/> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
